file renamed knowledge_ros_service to srs_knowledge

--- a/srs_knowledge/README
+++ b/srs_knowledge/README
@@ -1,3 +1,1 @@
-To compile, make sure environment variable JENA_LIBS is set, directing to /path/to/jena/lib
-
-
+To compile, make sure environment variable JAVA_HOME 
