--- a/srs_knowledge/README
+++ b/srs_knowledge/README
@@ -1,18 +1,22 @@
 To compile, make sure environment variable JAVA_HOME 
 
+(Incomplete... only info about get_objects_on_map and get_workspace_on_map)
+
+Have a look at demoplanaction.py too..
+
 --> test service /get_objects_on_map
 
 % rosservice call /get_objects_on_map 1 ipa-kitchen-map
 
-argument: [period map]
-first parameter is not used.. second is map name, default is ipa-kitchen-map, if no valid name specified, use the default
+argument: [map]
+map name, default is ipa-kitchen-map, if no valid name specified, use the default
 
 --> test service /get_workspace_on_map   (get all furnitures)
 
 % rosservice call /get_workspace_on_map 1 ipa-kitchen-map true
 
-argument: ['period', 'map', 'ifGeometryInfo']
-same as above, period is not used. 
+argument: ['map', 'ifGeometryInfo']
+
 map is using default ipa-kitchen-map
 ifGeometryInfo: if true, also return the geometric information about the furnitures, including
 - location as a point, x, y, z
@@ -22,3 +26,5 @@ ifGeometryInfo: if true, also return the geometric information about the furnitu
 if information is not available, return -1000 instead. 
 
 (the above data is obtained from ontology file, and based on the ipa-kitchen world model)
+
+
