--- a/srs_knowledge/README
+++ b/srs_knowledge/README
@@ -6,14 +6,14 @@ Have a look at demoplanaction.py too..
 
 --> test service /get_objects_on_map
 
-% rosservice call /get_objects_on_map 1 ipa-kitchen-map
+% rosservice call /get_objects_on_map ipa-kitchen-map
 
 argument: [map]
 map name, default is ipa-kitchen-map, if no valid name specified, use the default
 
 --> test service /get_workspace_on_map   (get all furnitures)
 
-% rosservice call /get_workspace_on_map 1 ipa-kitchen-map true
+% rosservice call /get_workspace_on_map ipa-kitchen-map true
 
 argument: ['map', 'ifGeometryInfo']
 
@@ -23,8 +23,8 @@ ifGeometryInfo: if true, also return the geometric information about the furnitu
 - dimension as l, w, h
 - orientation as r, p, y 
 
-if information is not available, return -1000 instead. 
+if information is not available, -1000 is returned instead. 
 
-(the above data is obtained from ontology file, and based on the ipa-kitchen world model)
+(the above data is obtained from the ontology file, and based on the ipa-kitchen world model)
 
 
