--- a/srs_environments/mainpage.dox
+++ b/srs_environments/mainpage.dox
@@ -2,7 +2,7 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b srs_shared_params is ... 
+\b srs_environments is ... 
 
 <!-- 
 Provide an overview of your package.
